--- a/src/components/svg.css
+++ b/src/components/svg.css
@@ -9,3 +9,7 @@
     fill: #2A9D8F;
     transition: fill 0.5s ease;
 }
+.coding-guy-3 rect, .coding-guy-3 ellipse, .coding-guy-3 circle, .coding-guy-3 path:not(#Tracé_143) {
+    fill: #F15A24;
+    transition: fill 0.5s ease;
+}
